--- a/day sixteen/index.html
+++ b/day sixteen/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <h1>
-      <button id="genNew" id="yeba"onclick="randomise()">Generate New Random Color</button>
+      Click on the Button below <br>
+      <button id="genNew"></button>
       <span id="color"></span>
     </h1>
 
@@ -21,10 +22,19 @@
         const randomColor = Math.floor(Math.random()*16777215).toString(16);
         document.body.style.backgroundColor = "#" + randomColor;
         color.innerHTML = "#" + randomColor;
-      } 
+      }
 
       genNew.addEventListener("click", setBg);
       setBg();
+
+      const setBg2 = () => {
+        const randomColor = Math.floor(Math.random()*16777215).toString(16);
+        document.getElementById('genNew').style.backgroundColor = "#" + randomColor;
+        genNew.innerHTML = "#" + randomColor;
+      }
+
+      genNew.addEventListener("click", setBg2);
+      setBg2();
 
     </script>
   </body>
