--- a/day sixteen/index.html
+++ b/day sixteen/index.html
@@ -14,6 +14,7 @@
       <button id="genNew"></button>
       <span id="color"></span>
     </h1>
+    <p>The hex code outside the button is for the background!</p
 
 
 
