--- a/day sixteen/index.html
+++ b/day sixteen/index.html
@@ -13,8 +13,9 @@
       Click on the Button below <br>
       <button id="genNew"></button>
       <span id="color"></span>
+      <p>The hex code outside the button is for the background!</p>
     </h1>
-    <p>The hex code outside the button is for the background!</p
+    
 
 
 
